--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "faker": "^5.1.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "save": "^2.4.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   }
